"get your unique solution"  font size fixed on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -316,7 +316,7 @@ footer p {
     }
     
     .carousel-caption h4 {
-        font-size: 17px;
+        font-size: 13px;
         /* margin-top: -1.25rem; */
         
     }
